# tzb

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  SECURITY.md  pyproject.toml  requirements.txt
benchmarks/: README.md
benchmarks/mme/: .gitattributes  README.md  test.py
benchmarks/valid/: compute_blue.py  create_json_references.py  run_evaluations.py  test.py
benchmarks/vrs/: .gitattributes  README.md  check.py  clair.py  create_json_references.py  extract_patch_json.py  run_evaluations.py  test.py
configs/: ds_config_zero2.json  environment.yml
demo/: README.md  requirements.txt
demo/TestQA/: 评测问题.txt
demo/backend/: app.py
demo/frontend/: index.html  script.js
docs/: data.md  demo.md  evaluation.md  training.md
examples/data/: sample_eval.json  sample_train.json
scripts/eval/: eval.sh  eval_ddp.py  eval_efficiency.py  run_efficiency_test.sh  test.sh
scripts/tools/: add_tokens.py  analyze_images.py  annotate_hrscd.py  chat.py  debug_dataset.py  debug_training.py  fix_image_paths.py  fix_json_types.py  generate_cot.py  generate_image.py  load_checkpoint_helper.py  merge_datasets.py  merge_lora.py  monitor_gpus.sh  run_annotation.sh  shuffle_dataset.py
scripts/train/: finetune.py  finetune_ds.sh  finetune_grpo.sh  finetune_ppo.sh  run_training.sh  train_grpo.py
src/remote_sensing_mllm/: __init__.py  compute_reward.py  conversation.py  dataset.py  robust_data_loading.py  trainer.py
src/remote_sensing_mllm/models/: __init__.py
src/remote_sensing_mllm/models/fm9g/: __init__.py  modeling_fm9g.py  (+6 more)
tests/: test_reward_format.py
